# rk_studio

./: .gitignore  CMakeLists.txt  README.md
config/: board.example.toml  board.toml  profile.example.toml  profile.toml
include/mediapipe/common/: config.h  rknn_model.h  types.h
include/mediapipe/detector/: palm_decoder.h  palm_detector.h
include/mediapipe/landmark/: hand_landmark.h
include/mediapipe/preprocess/: hw_preprocess.h  image_ops.h
include/mediapipe/tracking/: hand_tracker.h  one_euro_filter.h
include/rk_studio/ai_core/: ai_processor.h  ai_types.h
include/rk_studio/domain/: config.h  session.h  types.h
include/rk_studio/infra/: config_types.h  gst_audio_recorder.h  gst_util.h  runtime.h  session_files.h  telemetry.h  zenoh_publisher.h
include/rk_studio/media_core/: audio_engine.h  camera_pipeline.h  frame_converter.h  frame_orientation.h  media_engine.h  rtsp_server.h  session_writer.h  v4l2_pipeline.h  vision_engine.h
include/rk_studio/runtime/: runtime_manager.h
include/rk_studio/ui/: ai_canvas_widget.h  main_window.h  mediapipe_canvas_widget.h  preview_tile_widget.h  yolo_canvas_widget.h  yolo_labels.h
include/rk_studio/vision_core/: coco_labels.h  vision_processor.h  vision_types.h
models/: best_bomb_rk3588_int8.rknn  face_detection_yunet_2023mar_rk3588_int8.rknn  face_expression_mobilefacenet_2022july_rk3588_int8.rknn  hand_detector.rknn  yamnet_feature_rk3588_int8.rknn
scripts/: install_board_deps.sh  zenoh_dashboard.py  zenoh_subscribe_registry.py  zenoh_subscribe_results.py
src/: main.cpp
src/ai_core/: hand_ai_processor.cpp
src/cli/: main_cli.cpp
src/domain/: config.cpp  session.cpp  types.cpp
src/infra/: gst_audio_recorder.cpp  gst_util.cpp  runtime.cpp  session_files.cpp  telemetry.cpp  zenoh_publisher.cpp
src/media_core/: audio_engine.cpp  camera_pipeline.cpp  frame_converter.cpp  frame_orientation.cpp  media_engine.cpp  rtsp_server.cpp  session_writer.cpp  v4l2_pipeline.cpp  vision_engine.cpp
src/mediapipe/common/: rknn_model.cpp
src/mediapipe/detector/: palm_decoder.cpp  palm_detector.cpp
src/mediapipe/landmark/: hand_landmark.cpp
src/mediapipe/preprocess/: hw_preprocess.cpp  image_ops.cpp
src/mediapipe/tracking/: hand_tracker.cpp  one_euro_filter.cpp
src/runtime/: runtime_manager.cpp
src/ui/: ai_canvas_widget.cpp  main_window.cpp  mediapipe_canvas_widget.cpp  preview_tile_widget.cpp  yolo_canvas_widget.cpp  yolo_labels.cpp
src/vision_core/: audio_event_processor.cpp  coco_labels.cpp  face_expression_processor.cpp  mediapipe_processor.cpp  yolo_processor.cpp
